changed id name menu to class name menu on html and css files

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: rgb(173, 129, 215);
 }
-#menu {
+.menu {
   background-color: burlywood;
   width: 80%;
   margin-left: auto;
