--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
-  background-color: rgb(173, 129, 215);
+  /* background-color: rgb(173, 129, 215); */
+  background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
 }
 .menu {
-  /* background-color: burlywood; */
-  background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
+  background-color: burlywood;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
