--- a/style.css
+++ b/style.css
@@ -13,3 +13,14 @@ h2,
 p {
   text-align: center;
 }
+
+.flavor {
+  text-align: left;
+}
+.price {
+  text-align: right;
+}
+
+.item p {
+  display: inline-block;
+}
