--- a/style.css
+++ b/style.css
@@ -16,11 +16,12 @@ p {
 
 .flavor {
   text-align: left;
-  width: 49%;
+  width: 75%;
 }
 .price {
   text-align: right;
-  width: 49%;
+  width: 24%;
+  /* border: 1px solid black; */
 }
 
 .item p {
