--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ h2 {
 
 h1 {
   font-size: 40px;
+  margin-top: 0;
+  margin-bottom: 15px;
 }
 
 h2 {
@@ -40,6 +42,13 @@ hr {
   height: 2px;
   background-color: brown;
   border-color: brown;
+}
+
+img {
+  display: block;
+  margin-top: -25px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .flavor,
@@ -83,4 +92,8 @@ a:hover {
 
 a:active {
   color: brown;
+}
+
+.address {
+  margin-bottom: 5px;
 }
